# threads

./: .gitignore  CMakeLists.txt  main.c  run.sh
files/: file_management.c  file_management.h
threads/: threads.c  threads.h
